--- a/upload-server/pom.xml
+++ b/upload-server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.zhangjsh</groupId>
     <artifactId>upload-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0.RELEASE</version>
     <name>upload-server</name>
     <description>simple upload server</description>
 
